# cookie-cutter-template

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE  setup.cfg
{{cookiecutter.project_slug}}/tests/: test_import.py
