[metadata]
name = {{ cookiecutter.project_slug }}
version = 0.1a
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author-email = {{ cookiecutter.email }}
home-page = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
description = {{ cookiecutter.project_short_description }}
long-description = file: README.md, CHANGELOG.md
license = Hippocratic Licence 2.1
license-file = LICENSE
platform = any
keywords = 
classifiers =
    Development Status :: 1 - Planning
    License :: Other/Proprietary License
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed

[options]
include_package_data = true
python_requires = >= 3.8
test_suite = tests
install_requires =
tests_require =
    tox
package_dir=
    =src
packages=find:

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-testmon
    pytest-watch
    tox
dev =
    black
    isort
    mypy
    pre-commit
    pylint
    twine
    wheel
lint =
    pre-commit

[bdist_wheel]
universal = false

[sdist]
formats = gztar
